--- a/styles2.css
+++ b/styles2.css
@@ -22,7 +22,7 @@ body{
     background-color: #ffffff90;
     padding: 30px;
     border-radius: 5%;
-    box-shadow: 3px 3px 3px 3px #00000020;
+    box-shadow: 20px 20px 50px -35px #7b2486;
     width: 400px;
 }
 
